--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -6,6 +6,7 @@
     <meta name="theme-color" content="#000000" />
     <script src="https://kit.fontawesome.com/a1290642b1.js" rel="stylesheet" crossorigin="anonymous"></script>
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="icon" href="/images/favicon.png"/>
     <title>React Template</title>
   </head>
   <body>
