--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -7,7 +7,7 @@
     <script src="https://kit.fontawesome.com/a1290642b1.js" rel="stylesheet" crossorigin="anonymous"></script>
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="icon" href="/images/favicon.png"/>
-    <title>React Template</title>
+    <title>Chompy</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
