Working on carousel styling

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -7,6 +7,7 @@
     <script src="https://kit.fontawesome.com/a1290642b1.js" rel="stylesheet" crossorigin="anonymous"></script>
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="icon" href="/images/favicon.png"/>
+    <link rel="stylesheet" href="<NODE_MODULES_FOLDER>/react-responsive-carousel/lib/styles/carousel.min.css"/>  
     <title>Chompy</title>
   </head>
   <body>
